change pen and visibility status to boolean